Fix nano. Again